        defined for a specific function, corrected. Now, if nothing is defined the first  object
        in the slot \code{data} is returned (#223),
        \item the method was enhanced to deal with objects of type \code{list} containing only
        \code{RLum} objects. Depending on the \code{RLum} objects in the list the corresponding
         \code{get_RLum} methods
        are called.

      }

      \item \code{merge_RLum}
      \itemize{
        \item Method for \code{RLum.Results} objects now combines the data.frame using the function
        \code{data.table::rbindList} this should give a little bit more speed,
        \item the method was not working properely for objects of types \code{RLum.Results} if they
        tried to combine matrices and vectors found in the 'data.object' list.

      }

     \item \code{Risoe.BINfileData-class}
      \itemize{
        \item Show method now returns the valid grain range,
        \item the method \code{get_Risoe.BINfileData} was never active, but the corresponding message
        on using the function \code{Risoe.BINfileData2RLum.Analysis()} disappeared
        if a user tried to pass additional (unused) arguments. Corrected (thanks to Alice Versendaal).
      }

      \item {RLum.Data.Curve}
      \itemize{
        \item The corresponding \code{set_RLum} method of this class now comes with default values,
        corresponding to the prototype of this class and the method itself does not check any longer
        for missing values, means, empty objects can be produced,
        \item furthermore the  \code{set_RLum} method now accepts an \code{RLum.Data.Curve} object
        as input for the argument \code{data}. With this the object can be changed (e.g. recordType)
        without de-constructing the object.


      }

   }
  }

  \subsection{New functions}{
   \itemize{
      \item \code{calc_gSGC()} Calculate De value based on the gSGC by Li et al., 2015,