@@ -65,7 +65,7 @@
 </td>
 <td class=cellinside>2015-10-15
 </td>
-<td class=cellinside>10:31:55
+<td class=cellinside>18:01:11
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -82,9 +82,9 @@
 </td>
 <td class=cellinside>0.1.4
 </td>
-<td class=cellinside>2015-09-22
+<td class=cellinside>2015-10-15
 </td>
-<td class=cellinside>09:41:30
+<td class=cellinside>18:01:46
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -756,9 +756,9 @@
 </td>
 <td class=cellinside>0.2.1
 </td>
-<td class=cellinside>2015-09-22
+<td class=cellinside>2015-10-15
 </td>
-<td class=cellinside>09:41:30
+<td class=cellinside>18:02:09
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1173,9 +1173,9 @@
 </td>
 <td class=cellinside>0.2.7
 </td>
-<td class=cellinside>2015-09-22
+<td class=cellinside>2015-10-15
 </td>
-<td class=cellinside>09:41:30
+<td class=cellinside>18:03:14
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
